--- a/2017sanantonio/index.html
+++ b/2017sanantonio/index.html
@@ -123,16 +123,24 @@
 						<h2>Contact Details</h2>
 						<p class="address">
 							<span>Ednalyn C. De Dios</span><br>
-							<span>San Antonio, Texas</span><br>
-							<span>(210) 236-2685</span><br>
-							<span><a href="mailto:ednalyn.dedios@gmail.com">ednalyn.dedios@gmail.com</a></span>
+							<span>110 E. Houston Street</span><br>
+              <span>7th Floor Suite 234</span><br>
+              <span>San Antonio, TX 78205</span><br>
 						</p>
+            <p>
+              <span>(210) 236-2685</span><br>
+							<span><a href="mailto:ednalyn.dedios@gmail.com">ednalyn.dedios@gmail.com</a></span>
+            </p>
 
 					</div>
 
 					<div class="columns download">
 						<p>
-							<a href="https://alumni.codeup.com/uploads/699-1559446559.pdf" class="button"><i class="fa fa-download"></i>Download Resume</a>
+							<!-- Calendly link widget begin -->
+              <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+              <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+              <a href="" class="button" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/ecdedios'});return false;">Schedule time with me!</a>
+              <!-- Calendly link widget end -->
 						</p>
 					</div>
 
@@ -848,7 +856,18 @@
 
 					<div class="twelve columns">
 
-						<h3>Treehouse</h3>
+						<h3>Codeup</h3>
+						<p class="info">Data Science Career Accelerator Program<span>&bull;</span><em class="date">June 2019</em></p>
+            <p>
+              Fully-immersive, project-based 18-week Data Science career accelerator that provides students with 600+ hours of expert instruction in applied data science. Students develop expertise across the full data science pipeline (planning, acquisition, preparation, exploration, modeling, delivery), and become comfortable working with real, messy data to deliver actionable insights to diverse stakeholders.
+            </p>
+            <p>
+              Applied Statistics - SQL - Python - pandas - Matplotlib - Machine Learning - Natural Language Processing - Distributed Data - Data Storytelling - Git - Jupyter Notebooks - Anaconda
+            </p>
+            <p>Codeup’s programs are approved by the Texas Workforce Commission as well as the US Department of Veterans Affairs.
+            </p>
+            
+            <h3>Treehouse</h3>
 						<p class="info">Online Technology Education<span>&bull;</span><em class="date">February 2013 - Present</em></p>
 
 						<ul>
